tests/sksl/errors/UnscopedVariableInElse.glsl
### Compilation failed:

error: 2: variable 'color' must be created in a scope
1 error
